--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -2,7 +2,8 @@
 title: Fahim’s Happy Place
 email: sphincone@gmail.com
 description: >
-  Don’t know how you got here, but this is where I write everything that comes into my mind.
+  How did you stumble upon here?!, this is where I write everything that comes into my mind.
+
 baseurl: ""
 url: "http://localhost:4000"
 twitter_username: FahimTheTwit
@@ -13,4 +14,3 @@ sass:
 include: ['_pages']
 kramdown:
   input: GFM
-theme: minima
