--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: sphincone@gmail.com
 description: >
   Don’t know how you got here, but this is where I write everything that comes into my mind.
 baseurl: “/blog“
-url: "http://i3p9.github.io”
+url: "http://i3p9.github.io"
 twitter_username: FahimTheTwit
 github_username:  i3p9
 # Build Settings
