--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title: Fahim’s Happy Place
+title: Fahim’s Test Blog That He'll Never Write to
 email: sphincone@gmail.com
 description: >
   Don’t know how you got here, but this is where I write everything that comes into my mind.
