--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,5 +1,5 @@
 # Site Settings
-title: Fahim’s Happy Place
+title: Fahim’s Test Blog That He'll Never Write to
 email: sphincone@gmail.com
 description: >
   How did you stumble upon here?!, this is where I write everything that comes into my mind.
